Button Group refactor and Alignment issue in Team block under layout 3

--- a/assets/reactjs/src/blocks/team/style.scss
+++ b/assets/reactjs/src/blocks/team/style.scss
@@ -56,6 +56,7 @@
         display: flex;
         .qubely-team-content {
             display: flex;
+            flex-grow: 1;
             .qubely-team-content-inner {
                 width: 100%;
             }
